updated the synchronization code and role assignment logic